# ccc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
docs/: compiler-pipeline.md  project-overview.md  standard-library-and-variadic-support.md  testing-and-debugging.md
examples/: fib.c  stdlib_putchar.c  test.c
examples/multi/: main.c  math.c
include/: AST.h  Compile.h  IRGenerator.h  Lexer.h  Link.h  Parser.h  Preprocess.h  SemanticAnalyzer.h  SymbolTable.h  error.h
src/: AST.cc  Compile.cc  IRGenerator.cc  Lexer.cc  Link.cc  Parser.cc  Preprocess.cc  SemanticAnalyzer.cc  SymbolTable.cc  ccc.cc  error.cc
tests/integration/emit/: helper.c  simple.c
tests/integration/loop/: for_nested_if.c
tests/integration/multi_file/test1/: multi_file_helper.c  multi_file_main.c
tests/integration/multi_file/test2/: main.c  test.c  test.h
tests/integration/preprocess/: comment.c  if_elif.c  macro_value.c
tests/integration/return/: basic_return.c
tests/integration/std/: ctype.c  errno.c  limits.c  stdarg.c  stddef.c  stdio.c  stdlib.c  string.c  variadic_decl_call.c
tests/integration/type/: array_type.c  char.c  enum_type.c  float_double.c  function_pointer_type.c  pointer_levels.c  pointer_void.c  struct_member_arrow.c  struct_member_dot.c  struct_type.c  union_type.c
tests/invalid/: conflicting_prototype.c  undeclared_var.c
